# Scope

./: .gitignore  Cargo.toml  go.mod  go.sum  main.go  mise.toml  package.json
.github/workflows/: release-cli.yml  release-react.yml  release-sdk-go.yml  release-solid.yml  release-svelte.yml  release-ui-react.yml  release-ui-solid.yml  release-ui-svelte.yml  release-ui-vue.yml  release-ui.yml  release-vue.yml
.mise/tasks/: build.sh  check  ci  clean  dev  fmt  lint  setup  test  test-server
aur/: PKGBUILD
cmd/: root.go
cmd/chat/: chat.go
cmd/web/: embed.go  embed_spa.go  web.go
crates/scope-core/: Cargo.toml
crates/scope-core/migrations/postgres/: 001_initial.sql
crates/scope-core/migrations/sqlite/: 001_initial.sql
crates/scope-core/src/: lib.rs
crates/scope-core/src/config/: mod.rs
crates/scope-core/src/domain/: fort.rs  mod.rs  notification.rs  ports.rs  session.rs
crates/scope-core/src/infra/: mod.rs
crates/scope-core/src/infra/discovery/: mod.rs  notifications.rs
crates/scope-core/src/infra/postgres/: mod.rs
crates/scope-core/src/infra/proxy/: mod.rs
crates/scope-core/src/infra/sqlite/: mod.rs  tests.rs
crates/scope-server/: Cargo.toml
crates/scope-server/src/: main.rs  state.rs
crates/scope-server/src/routes/: api.rs  mod.rs  proxy.rs  shell_ws.rs  spa.rs
docs/: 2026-03-11-better-auth-setup.md  2026-03-11-service-auth-design.md  2026-03-11-web-ui-design.md  2026-03-12-go-web-shell-design.md  2026-03-12-workfort-ui-wc-design.md  2026-03-13-service-discovery-design.md  2026-03-14-fort-scoped-routing-design.md  design-token-research.md  fort-isolated-storage-design.md  frontend-docs-design.md  per-fort-auth-design.md  pylon-integration-design.md  remaining-work.md  setup-screen-design.md  shell-boot-provider-design.md  tauri-fort-config-design.md  tauri-mobile-design.md  ui-component-library-design.md  web-component-library-research.md
docs/archive/: 2026-03-12-go-web-shell-design.md  2026-03-12-workfort-ui-wc-design.md  2026-03-13-shell-spa-design.md
docs/frontend/: README.md  architecture.md  auth.md  dev-workflow.md  service-contract.md  shared-packages.md
docs/plans/: 2026-02-25-plan-1-ui.md  2026-02-25-plan-2-business-logic.md  2026-02-25-workfort-chat-design.md  2026-02-26-dm-refactor-design.md  2026-02-27-whisper-stt-cgo-design.md  2026-02-27-whisper-stt-design.md  2026-03-11-pkg-auth.md  2026-03-11-web-ui.md  2026-03-11-workfort-ui.md  2026-03-12-go-web-shell.md  2026-03-12-ui-package-split.md  (+21 more)
go/frontend/: go.mod  (+1 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  lib.rs  main.rs  proxy.rs
web/: .gitignore  package.json  pnpm-lock.yaml
(+152 files in other folders)
