[package]
name = "workfort"
version = "0.1.0"
edition = "2021"

[lib]
name = "workfort_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scope-core = { path = "../crates/scope-core" }
url = "2"
tokio = { version = "1", features = ["time", "rt"] }
log = "0.4"
