[package]
name = "scope-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2"
directories = "6"
thiserror = "2"
log = "0.4"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
axum = { version = "0.8", features = ["ws"] }
tempfile = "3"
